--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to InfinityFree
 on:
   push:
     branches:
-      - main   # أو الفرع اللي شغال عليه
+      - main
 
 jobs:
   ftp-deploy:
@@ -17,5 +17,5 @@ jobs:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          local-dir: ./   # الكود اللي عايز ترفعه
-          server-dir: /htdocs/   # مجلد الموقع على InfinityFree
+          local-dir: ./ 
+          server-dir: /htdocs/
