--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,8 +14,8 @@ jobs:
       - name: FTP-Deploy-Action
         uses: SamKirkland/FTP-Deploy-Action@4.3.0
         with:
-          server: ${{ ftpupload.net }}
-          username: ${{ if0_39736700 }}
-          password: ${{ mero131120200 }}
-          local-dir: ./ 
-          server-dir: /htdocs/
+          server: ${{ secrets.FTP_SERVER }}
+          username: ${{ secrets.FTP_USERNAME }}
+          password: ${{ secrets.FTP_PASSWORD }}
+          local-dir: ./   # الملفات اللي عايز ترفعها
+          server-dir: /htdocs/   # المسار على السيرفر
